--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -20,198 +20,6 @@
 	<div class="section grey padded">
 		<div class="contentWidth">
 			<div class="sectionTitle">ЦЕНОВНИК</div>
-			<!--<table class="priceTable">
-				<tr>
-					<td>Дневна карта одрасли - Радни дан</td>
-					<td>целодневна</td>
-					<td>400,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта одрасли - Викенд</td>
-					<td>целодневна</td>
-					<td>400,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта одрасли - Радни дан</td>
-					<td>после 16ч</td>
-					<td>250,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта одрасли - Викенд</td>
-					<td>после 16ч</td>
-					<td>300,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта деца од 5 до 12 година</td>
-					<td>целодневна</td>
-					<td>150,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта пензионери</td>
-					<td>целодневна</td>
-					<td>250,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Дневна карта особе са инвалидитетом</td>
-					<td>целодневна</td>
-					<td>150,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ПОРОДИЧНА - Родитељи са једним или двоје деце</td>
-					<td>целодневна</td>
-					<td>800,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Поједниачна карта одрасли</td>
-					<td>ноћно купање</td>
-					<td>500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Месечна карта одрасли</td>
-					<td>целодневна</td>
-					<td>6 500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Сезонска карта одрасли</td>
-					<td>целодневна</td>
-					<td>11 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>FITPASS</td>
-					<td>целодневна</td>
-					<td>0,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Месечна карта одрасли</td>
-					<td>целодневна</td>
-					<td>6 500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА ЗА ОДРАСЛЕ</td>
-					<td>целодневна</td>
-					<td>260,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА ЗА ОДРАСЛЕ</td>
-					<td>полудневна</td>
-					<td>190,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА ЗА ПЕНЗИОНЕРЕ</td>
-					<td>целодневна</td>
-					<td>190,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА - ПОРОДИЧНА 2+2</td>
-					<td>целодневна</td>
-					<td>600,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА - деца од 5 до 12 година</td>
-					<td>целодневна</td>
-					<td>110,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА ЗА ОДРАСЛЕ целодневна</td>
-					<td>викенд</td>
-					<td>300,00 дин.</td>
-				</tr>
-				<tr>
-					<td>ТРИ ПЛУС КАРТИЦА ЗА ОДРАСЛЕ полудневна</td>
-					<td>викенд</td>
-					<td>220,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли</td>
-					<td>целодневна</td>
-					<td>310,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли</td>
-					<td>полудневна</td>
-					<td>220,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS породична 2+2</td>
-					<td>целодневна</td>
-					<td>720,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS пензионери</td>
-					<td>целодневна</td>
-					<td>220,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS деца од 5 до 12 година</td>
-					<td>целодневна</td>
-					<td>130,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли целодневна</td>
-					<td>викенд</td>
-					<td>360,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли полудневна</td>
-					<td>викенд</td>
-					<td>270,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Деца млађа од 5 година</td>
-					<td>сваки дан</td>
-					<td>бесплатно</td>
-				</tr>
-				<tr>
-					<td>Изнајмљивање сунцобрана</td>
-					<td>Дневно</td>
-					<td>200,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Изнајмљивање лежаљке</td>
-					<td>Дневно</td>
-					<td>200,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Изнајмљивање лежаљке испод перголе</td>
-					<td>Дневно</td>
-					<td>250,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Комплет сунцобран и две лежаљке</td>
-					<td>Дневно</td>
-					<td>400,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Промоције са промотеркама до 16ч</td>
-					<td>радни дан</td>
-					<td>2 950,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Промоције са промотеркама до 16ч</td>
-					<td>викенд</td>
-					<td>4 120,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама до 18ч</td>
-					<td>радни дан</td>
-					<td>4 120,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама до 18ч</td>
-					<td>викенд</td>
-					<td>5 300,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Подела рекламних флајера на благајни базена 5000 комада</td>
-					<td>дневно</td>
-					<td>5 880,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Подела рекламних флајера на благајни базена 10 000 комада</td>
-					<td>дневно</td>
-					<td>10 600,00 дин.</td>
-				</tr>
-			</table>-->
 			<table class="priceTable">
 				<tr>
 					<td>Дневна карта одрасли – свим данима</td>
@@ -224,7 +32,7 @@
 					<td>300,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Дневна карта деца од 5 до 12 година -  свим данима</td>
+					<td>Дневна карта деца од 5 до 12 година - свим данима</td>
 					<td>целодневна</td>
 					<td>200,00 дин.</td>
 				</tr>
@@ -234,7 +42,7 @@
 					<td>300,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Дневна карта особе са инвалидитетом -  свим данима</td>
+					<td>Дневна карта особе са инвалидитетом - свим данима</td>
 					<td>целодневна</td>
 					<td>200,00 дин.</td>
 				</tr>
@@ -249,59 +57,24 @@
 					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Породична карта  ( родитељи са једним или двоје деце до 12 година )</td>
-					<td>целодневна</td>
+					<td>Породична карта ( родитељи са једним или двоје деце до 12 година )</td>
+					<td>после 16 часова</td>
 					<td>850,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Појединачна карта - одрасли </td>
+					<td>Појединачна карта - одрасли</td>
 					<td>ноћно купање</td>
 					<td>500,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Месечна карта – одрасли (30 термина)</td>
 					<td>целодневна</td>
-					<td>7 000,00 дин.</td>
+					<td>7.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Сезонска карта одрасли</td>
+					<td>Сезонска карта – одрасли</td>
 					<td>целодневна</td>
-					<td>11 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли - радни дан</td>
-					<td>целодневна</td>
-					<td>310,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли - радни дан</td>
-					<td>полудневна</td>
-					<td>220,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS породична - ( родитељи са једним или двоје деце до 12 година )</td>
-					<td>целодневна</td>
-					<td>720,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS пензионери - свима данима</td>
-					<td>целодневна</td>
-					<td>220,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS деца од 5 до 12 година - свим данима</td>
-					<td>целодневна</td>
-					<td>130,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли - викенд</td>
-					<td>целодневна</td>
-					<td>360,00 дин.</td>
-				</tr>
-				<tr>
-					<td>CITY PASS одрасли - викенд</td>
-					<td>полудневна</td>
-					<td>270,00 дин.</td>
+					<td>11.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Деца млађа од 5 година</td>
@@ -309,69 +82,69 @@
 					<td>бесплатно</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање сунцобрана </td>
+					<td>Изнајмљивање сунцобрана</td>
 					<td>дневно</td>
 					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање лежаљке </td>
+					<td>Изнајмљивање лежаљке</td>
 					<td>дневно</td>
 					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање лежаљке испод перголе </td>
+					<td>Изнајмљивање лежаљке испод перголе</td>
 					<td>дневно</td>
 					<td>300,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Комплет сунцобран и две лежаљке </td>
+					<td>Комплет сунцобран и две лежаљке</td>
 					<td>дневно</td>
 					<td>500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Промоције са промотеркама радним даном  до 16.00 ч</td>
+					<td>Промоције са промотеркама радним даном до 16.00 ч</td>
 					<td>радни дан</td>
 					<td>4.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Промоције са промотеркама викендом до 16.00 ч</td>
 					<td>викенд</td>
-					<td>5 000,00 дин.</td>
+					<td>5.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Постављање промо пулта са промотеркама радним даном до 18.00 ч</td>
+					<td>Постављање промо пулта са промотеркама радним даном до18.00 ч</td>
 					<td>радни дан</td>
-					<td>5 000,00 дин.</td>
+					<td>5.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Постављање промо пулта са промотеркама викендом до 18.00 ч</td>
 					<td>викенд</td>
-					<td>6 000,00 дин.</td>
+					<td>6.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Подела рекламних флајера на благајни базена  до 5000 комада</td>
+					<td>Подела рекламних флајера на благајни базена до 5000 комада</td>
 					<td>дневно</td>
-					<td>5 880,00 дин.</td>
+					<td>5.880,00 дин</td>
 				</tr>
 				<tr>
-					<td>Подела рекламних флајера на благајни базена 10 000 комада</td>
+					<td>Подела рекламних флајера на благајни базена до 10000 комада</td>
 					<td>дневно</td>
-					<td>10 600,00 дин.</td>
+					<td>10.600,00 дин</td>
 				</tr>
 				<tr>
 					<td>Постављање промо пулта са промотеркама (плато – «дунавска страна) од 07.00 до 19.00 ч</td>
-					<td>радни дан </td>
-					<td>10 000,00 дин.</td>
+					<td>радни дан</td>
+					<td>10.000,00 дин</td>
 				</tr>
 				<tr>
 					<td>Постављање промо пулта са промотеркама (плато - «дунавска страна) од 07.00 до 19.00 ч</td>
 					<td>викенд</td>
-					<td>12 000,00 дин.</td>
+					<td>12.000,00 дин</td>
 				</tr>
 				<tr>
-					<td>Постављање промо пулта са промотеркама (плато- «дунавска страна) </td>
+					<td>Постављање промо пулта са промотеркама (плато- «дунавска страна)</td>
 					<td>месечно</td>
-					<td>270 000,00 дин.</td>
+					<td>12.000,00 дин</td>
 				</tr>
 			</table>
 		</div>
