--- a/views/dokumenti.ejs
+++ b/views/dokumenti.ejs
@@ -2,6 +2,11 @@
 	<div class="contentWidth">
 		<div class="sectionTitle">DOKUMENTI</div>
 		<div class="documents">
+			<div class="document" onclick="window.open('https://www.25maj.rs/downloads/Cenovnik-2022.pdf','_blank');">
+				<div class="documentType" style="background-image:url(/icons/pdficon.png)">
+					<div class="text">Cenovnik 2022. 25. maj - Milan Gale Muškatirović</div>
+				</div>
+			</div>
 			<div class="document" onclick="window.open('https://d3n8a8pro7vhmx.cloudfront.net/starigrad/pages/155/attachments/original/1630920378/1-Odluka_o_osnivanju_PD_25.maj-mgm.pdf?1630920378','_blank');">
 				<div class="documentType" style="background-image:url(/icons/pdficon.png)">
 					<div class="text">Odluka o osnivanju PD 25. maj - Milan Gale Muškatirović</div>
