--- a/views/sportska-sala.ejs
+++ b/views/sportska-sala.ejs
@@ -1,5 +1,5 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/sportska-sala.png)"></div>
+	<div class="pageHeaderFixed" style="background-image: url(/images/salaHeader.jpeg)"></div>
 	<div class="pageFixedTitle">СПОРТСКА САЛА</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
@@ -19,42 +19,42 @@
 				<tr>
 					<td>Закуп сале 1 сат коришћења од 08.00–12.00 часова</td>
 					<td>радним данима</td>
-					<td>3 200,00 дин.</td>
+					<td>3.500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп сале 1 сат коришћења од 12.00–15.00 часова </td>
+					<td>Закуп сале 1 сат коришћења од 12.00–15.00 часова</td>
 					<td>радним данима</td>
-					<td>2 500,00 дин.</td>
+					<td>3.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења од 15.00 - 23.00 часа</td>
 					<td>радним данима</td>
-					<td>4 500,00 дин.</td>
+					<td>5.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења од 23.00 часа</td>
 					<td>радним данима</td>
-					<td>2 500,00 дин.</td>
+					<td>3.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења од 08.00 - 22.00 часа</td>
 					<td>викендом</td>
-					<td>4 500,00 дин.</td>
+					<td>5.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења од 22.00 часа</td>
-					<td>викендом </td>
-					<td>2 500,00 дин.</td>
+					<td>викендом</td>
+					<td>3.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења</td>
 					<td>субвенционисана цена</td>
-					<td>900,00 дин.</td>
+					<td>1.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Закуп сале 1 сат коришћења</td>
 					<td>термин за школе</td>
-					<td>3 165,00 дин.</td>
+					<td>3.500,00 дин.</td>
 				</tr>
 			</table>
 		</div>
