--- a/views/besplatni-programi-penzioneri.ejs
+++ b/views/besplatni-programi-penzioneri.ejs
@@ -49,10 +49,10 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							Јога за пензионере - ТРЕНУТНО НИЈЕ ДОСУТПНО
+							Јога за пензионере <!--- ТРЕНУТНО НИЈЕ ДОСУТПНО-->
 						</div>
 						<div class="text">
-							Уторком и четвртком у терминима од 10 до 12 часова пензионери могу похађати бесплатне часове јоге који имају позитивно деловање на физичко и ментално стање и повећање животне енергије. 
+							Понедељком и четвртком у термину од 17 до 18 часова пензионери могу похађати бесплатне часове јоге који имају позитивно деловање на физичко и ментално стање и повећање животне енергије. 
 						</div>
 					</div>
 					
