--- a/views/skolica-plivanja.ejs
+++ b/views/skolica-plivanja.ejs
@@ -26,7 +26,7 @@
 			<div class="smallContent padded" style="padding:50px 0px;">
 				<div class="whiteBoxTransparent">
 					<div class="readingText">
-						Школа стартује <b>5. октобра 2022.</b> године и одржаваће се у следећим терминима:<br>понедељак, среда и петаk<br>Преподне 09-10ч<br>Поподне 17-18ч
+						Школа стартује <b>12. септембра 2022.</b> године и одржаваће се у следећим терминима:<br>понедељак, среда и петаk<br>Преподне 09-10ч<br>Поподне 17-18ч
 					</div>
 				</div>
 			</div>
