--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -12,7 +12,7 @@
 				</div>
 				<div class="inline">
 					<div class="readingText">
-						<div>Радно Време <i>Wellness</i> Центра:</div>
+						<div style="margin-bottom:10px">Радно Време <i>Wellness</i> Центра:</div>
 						<table class="terminiTable">
 							<tr>
 								<td>Радни Дан</td>
@@ -23,6 +23,7 @@
 								<td>14:00 - 22:00</td>
 							</tr>
 						</table>
+						<div style="margin-top:10px">Сезона траје од 1.10.2022. до 31.05.2023.</div>
 					</div>
 				</div>
 			</div>
