--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -20,10 +20,10 @@
 							</tr>
 							<tr>
 								<td>18:00 - 22:00</td>
-								<td>14:00 - 22:00</td>
+								<td>15:00 - 22:00</td>
 							</tr>
 						</table>
-						<div style="margin-top:10px">Сезона траје од 1.10.2022. до 31.05.2023.</div>
+						<div style="margin-top:10px">Сезона траје од 1. октобра до 31. маја.</div>
 					</div>
 				</div>
 			</div>
