--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -82,69 +82,24 @@
 					<td>бесплатно</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање сунцобрана</td>
+					<td>Изнајмљивање - један сунцобран</td>
 					<td>дневно</td>
 					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање лежаљке</td>
+					<td>Изнајмљивање - једна лежаљка   </td>
 					<td>дневно</td>
 					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Изнајмљивање лежаљке испод перголе</td>
+					<td>Изнајмљивање - једна лежаљка испод перголе </td>
 					<td>дневно</td>
 					<td>300,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Комплет сунцобран и две лежаљке</td>
+					<td>Изнајмљивање - један сунцобран и две лежаљке </td>
 					<td>дневно</td>
 					<td>500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Промоције са промотеркама радним даном до 16.00 ч</td>
-					<td>радни дан</td>
-					<td>4.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Промоције са промотеркама викендом до 16.00 ч</td>
-					<td>викенд</td>
-					<td>5.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама радним даном до18.00 ч</td>
-					<td>радни дан</td>
-					<td>5.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама викендом до 18.00 ч</td>
-					<td>викенд</td>
-					<td>6.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Подела рекламних флајера на благајни базена до 5000 комада</td>
-					<td>дневно</td>
-					<td>5.880,00 дин</td>
-				</tr>
-				<tr>
-					<td>Подела рекламних флајера на благајни базена до 10000 комада</td>
-					<td>дневно</td>
-					<td>10.600,00 дин</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама (плато – «дунавска страна) од 07.00 до 19.00 ч</td>
-					<td>радни дан</td>
-					<td>10.000,00 дин</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама (плато - «дунавска страна) од 07.00 до 19.00 ч</td>
-					<td>викенд</td>
-					<td>12.000,00 дин</td>
-				</tr>
-				<tr>
-					<td>Постављање промо пулта са промотеркама (плато- «дунавска страна)</td>
-					<td>месечно</td>
-					<td>12.000,00 дин</td>
 				</tr>
 			</table>
 		</div>
