--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -39,43 +39,43 @@
 			<table class="priceTable">
 				<tr>
 					<td>Дневна карта за сауну и мали базен (одрасли и деца старија од 4 године)</td>
-					<td>свим данима</td>
+					<td>сваки дан</td>
 					<td>1.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Spa premium – месечна карта за сауну и мали базен ( 30 термина )</td>
-					<td>свим данима</td>
-					<td>6.500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Spa plus – месечна карта за сауну и мали базен ( 23 термина )</td>
-					<td>радним данима</td>
-					<td>5.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Spa economy – месечна карта за сауну и мали базен ( 12 термина )</td>
-					<td>викендом</td>
-					<td>4.500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Combo premium – месечна карта за сауну и олимпијски базен (30 термина)</td>
-					<td>пакет услуга свим данима</td>
-					<td>10.000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Combo plus – месечна карта за сауну и олимпијски базен (23 термина )</td>
-					<td>пакет услуга радним данима</td>
-					<td>7.500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Combo economy - месечна карта за сауну и олимпијски базен (12 термина)</td>
-					<td>пакет услуга викендом</td>
-					<td>7.000,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Combo daily – дневна карта за сауну и олимпијски базен ( базен се користи у терминима за грађанство током радног времена сауне )</td>
 					<td>пакет услуга</td>
 					<td>1.100,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Spa premium – месечна карта за сауну и мали базен </td>
+					<td>сваки дан</td>
+					<td>6.500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Spa plus – месечна карта за сауну и мали базен </td>
+					<td>само радним даном </td>
+					<td>5.000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Spa economy – месечна карта за сауну и мали базен </td>
+					<td>само викендом</td>
+					<td>4.500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo premium – месечна карта за сауну и олимпијски базен </td>
+					<td>пакет услуга сваки дан</td>
+					<td>10.000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo plus  –  месечна карта за сауну и олимпијски базен </td>
+					<td>пакет услуга само радним даном</td>
+					<td>7.500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo economy - месечна карта за сауну и олимпијски базен </td>
+					<td>пакет услуга само викендом</td>
+					<td>7.000,00 дин.</td>
 				</tr>
 			</table>
 		</div>
