--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -58,117 +58,29 @@
 	<div class="section white padded">
 		<div class="contentWidth">
 			<div class="sectionTitle">ЦЕНОВНИК</div>
-			<!--<table class="priceTable">
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - цео базен </td>
-					<td>сваким даном</td>
-					<td>16 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - пола базена </td>
-					<td>сваким даном</td>
-					<td>9 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - четвртина базена </td>
-					<td>сваким даном</td>
-					<td>5 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - осмина базена </td>
-					<td>сваким даном</td>
-					<td>3 500,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 5 сати корићшења - домаћа такмичења  </td>
-					<td>сваки дан</td>
-					<td>100 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 5 сати коришћења - међународна такмичења</td>
-					<td>сваки дан</td>
-					<td>150 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена  3 сата коришћења - домаћа такмичења </td>
-					<td>сваки дан</td>
-					<td>66 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 3 сата коришћења - међународна такмичења </td>
-					<td>сваки дан</td>
-					<td>99 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 2 сата коришћења - домаћа такмичења</td>
-					<td>сваки дан</td>
-					<td>46 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - домаћа такмичења </td>
-					<td>сваки дан</td>
-					<td>24 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - међународна такмичења</td>
-					<td>сваки дан</td>
-					<td>44 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена цео дан коришћења - међународна такмичења са публиком</td>
-					<td>сваки дан</td>
-					<td>420 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена цео дан коришћења - домаћа такмичења са публиком</td>
-					<td>сваки дан</td>
-					<td>300 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена 1 сат  коришћења - за снимања </td>
-					<td>сваки дан</td>
-					<td>35 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп платформе и малог базена 1 сат коришћења</td>
-					<td>сваки дан</td>
-					<td>6 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп термина затвореног базена цео дан коришћења - за организацију догађаја са додатним капацитетима</td>
-					<td>сваки дан</td>
-					<td>600 000,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп хидросаунског блока цео дан коришћења</td>
-					<td>цео дан</td>
-					<td>150 000,00 дин.</td>
-				</tr>
-			</table>-->
-
 			<table class="priceTable">
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - цео базен</td>
+					<td>Закуп термина затвореног базена 1 сат коришћења - цео базен </td>
 					<td>сваки дан</td>
 					<td>20.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - пола базена</td>
+					<td>Закуп термина затвореног базена 1 сат коришћења - пола базена </td>
 					<td>сваки дан</td>
 					<td>12.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - четвртина базена</td>
+					<td>Закуп термина затвореног базена 1 сат коришћења - четвртина базена </td>
 					<td>сваки дан</td>
 					<td>7.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - осмина базена</td>
+					<td>Закуп термина затвореног базена 1 сат коришћења - осмина базена </td>
 					<td>сваки дан</td>
 					<td>4.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 5 сати корићшења - домаћа такмичења</td>
+					<td>Закуп термина затвореног базена 5 сати корићшења - домаћа такмичења  </td>
 					<td>сваки дан</td>
 					<td>120.000,00 дин.</td>
 				</tr>
@@ -178,12 +90,12 @@
 					<td>185.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 3 сата коришћења - домаћа такмичења</td>
+					<td>Закуп термина затвореног базена  3 сата коришћења - домаћа такмичења </td>
 					<td>сваки дан</td>
 					<td>78.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 3 сата коришћења - међународна такмичења</td>
+					<td>Закуп термина затвореног базена 3 сата коришћења - међународна такмичења </td>
 					<td>сваки дан</td>
 					<td>135.000,00 дин.</td>
 				</tr>
@@ -193,7 +105,7 @@
 					<td>54.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - домаћа такмичења</td>
+					<td>Закуп термина затвореног базена 1 сат коришћења - домаћа такмичења </td>
 					<td>сваки дан</td>
 					<td>28.000,00 дин.</td>
 				</tr>
@@ -213,7 +125,7 @@
 					<td>350.000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп термина затвореног базена 1 сат коришћења - за снимања</td>
+					<td>Закуп термина затвореног базена 1 сат  коришћења - за снимања </td>
 					<td>сваки дан</td>
 					<td>40.000,00 дин.</td>
 				</tr>
@@ -298,10 +210,10 @@
 				<tr>
 					<td>Репрограмибилна картица за пролаз</td>
 					<td>комад</td>
-					<td>150,00 дин.</td>
+					<td>250,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Месечна карта - одрасли (30 термина)</td>
+					<td>Месечна карта - одрасли </td>
 					<td>рекр. пливање</td>
 					<td>4.500,00 дин.</td>
 				</tr>
@@ -326,7 +238,7 @@
 					<td>2.500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Месечна карта - ђаци и студенти (30 термина)</td>
+					<td>Месечна карта - ђаци и студенти</td>
 					<td>рекр. пливање</td>
 					<td>3.000,00 дин.</td>
 				</tr>
@@ -354,7 +266,7 @@
 					<td>Школа пливања - месечна чланарина за друго и свако наредно дете из исте породице</td>
 					<td>2 термина недељно</td>
 					<td>2.000,00 дин</td>
-				</tr>
+				</tr
 				<tr>
 					<td>Универзитет Метрополитан дневна карта - студенти</td>
 					<td>сви термини</td>
@@ -375,11 +287,6 @@
 					<td>рекр. пливање</td>
 					<td>3.000,00 дин</td>
 				</tr>
-				<!--<tr>
-					<td>Карта за кориснике месечне претплатне карте за превоз – карта за 1 динар</td>
-					<td>рекр. пливање</td>
-					<td>1,00 дин</td>
-				</tr>-->
 				<tr>
 					<td>Издавање потврде, тест пливања</td>
 					<td>услуга</td>
