--- a/views/besplatni-programi-penzioneri.ejs
+++ b/views/besplatni-programi-penzioneri.ejs
@@ -67,10 +67,10 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							Кардио фитнес - ТРЕНУТНО НИЈЕ ДОСТУПНО
+							Кардио фитнес <!-- - ТРЕНУТНО НИЈЕ ДОСТУПНО-->
 						</div>
 						<div class="text">
-							Понедељак, среда и петак од 10 до 12 часова резервисани су за кардио фитнес. Овај програм је пажљиво осмишљен и прилагођен старијој популацији која често није у могућности да приушти себи издатке за овакву врсту активности.
+							Уторак и четвртак од 10 до 11 часова резервисани су за кардио фитнес. Овај програм је пажљиво осмишљен и прилагођен старијој популацији која често није у могућности да приушти себи издатке за овакву врсту активности.
 						</div>
 					</div>
 					
