--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -103,7 +103,8 @@
 				<div class="inline">
 					<div class="listTitle">СКУПШТИНА Привредног Друштва</div>
 					<ul class="list">
-						<li><p>Немања Маријан, <span class="smallItalic">председник</span></p></li>
+						<!--<li><p>Немања Маријан, <span class="smallItalic">председник</span></p></li>-->
+						<li><p>Дражен Козомара, <span class="smallItalic">председник</span></p></li>
 						<li><p>Никола Артиновић, <span class="smallItalic">члан</span></p></li>
 						<li><p>Ана Поповић, <span class="smallItalic">члан</span></p></li>
 					</ul>
