--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -24,47 +24,47 @@
 				<tr>
 					<td>Дневна карта одрасли – свим данима</td>
 					<td>целодневна</td>
-					<td>450,00 дин.</td>
+					<td>500,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта одрасли – свим данима</td>
 					<td>после 16 часова</td>
-					<td>300,00 дин.</td>
+					<td>350,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта деца од 5 до 12 година - свим данима</td>
 					<td>целодневна</td>
-					<td>200,00 дин.</td>
+					<td>250,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта пензионери - свим данима</td>
 					<td>целодневна</td>
-					<td>300,00 дин.</td>
+					<td>350,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта особе са инвалидитетом - свим данима</td>
 					<td>целодневна</td>
-					<td>200,00 дин.</td>
+					<td>250,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта труднице – свим данима</td>
 					<td>целодневна</td>
-					<td>350,00 дин.</td>
+					<td>400,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Дневна карта труднице – свим данима</td>
 					<td>после 16 часова</td>
-					<td>250,00 дин.</td>
+					<td>300,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Породична карта ( родитељи са једним или двоје деце до 12 година )</td>
 					<td>после 16 часова</td>
-					<td>850,00 дин.</td>
+					<td>900,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Појединачна карта - одрасли</td>
 					<td>ноћно купање</td>
-					<td>500,00 дин.</td>
+					<td>600,00 дин.</td>
 				</tr>
 				<tr>
 					<td>Месечна карта – одрасли (30 термина)</td>
@@ -100,6 +100,29 @@
 					<td>Изнајмљивање - један сунцобран и две лежаљке </td>
 					<td>дневно</td>
 					<td>500,00 дин.</td>
+				</tr>
+			</table>
+			<div class="sectionTitle">КАРТИЦА ПОГОДНОСТИ</div>
+			<table class="priceTable">
+				<tr>
+					<td>Дневна карта одрасли – свим данима</td>
+					<td>целодневна</td>
+					<td>450,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта одрасли – свим данима</td>
+					<td>после 16 часова</td>
+					<td>315,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта – одрасли (30 термина)</td>
+					<td>целодневна</td>
+					<td>6.300,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Сезонска карта – одрасли</td>
+					<td>целодневна</td>
+					<td>9.900,00 дин.</td>
 				</tr>
 			</table>
 		</div>
