--- a/views/dokumenti.ejs
+++ b/views/dokumenti.ejs
@@ -2,6 +2,11 @@
 	<div class="contentWidth">
 		<div class="sectionTitle">DOKUMENTI</div>
 		<div class="documents">
+			<div class="document" onclick="window.open('https://www.25maj.rs/downloads/Cenovnik-2023-Otvoreni.pdf','_blank');">
+				<div class="documentType" style="background-image:url(/icons/pdficon.png)">
+					<div class="text">Cenovnik za otvoreni bazen 2023. 25. maj - Milan Gale Muškatirović</div>
+				</div>
+			</div>
 			<div class="document" onclick="window.open('https://www.25maj.rs/downloads/Cenovnik-2023.pdf','_blank');">
 				<div class="documentType" style="background-image:url(/icons/pdficon.png)">
 					<div class="text">Cenovnik 2023. 25. maj - Milan Gale Muškatirović</div>
