--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -58,7 +58,7 @@
 				</tr>
 				<tr>
 					<td>Породична карта ( родитељи са једним или двоје деце до 12 година )</td>
-					<td>после 16 часова</td>
+					<td>целодневна</td>
 					<td>900,00 дин.</td>
 				</tr>
 				<tr>
